# mcp-marketing-instagram

./: Dockerfile  README.md  genindex.html  glama.json  index.html  modules.html  pyproject.toml  search.html  searchindex.js  src.html  src.models.html
.github/workflows/: ci.yml  deploy.yml
mcp_instagram/: identity.py  server.py  session.py
src/: instagram_client.py  instagram_mcp_server.py
src/models/: instagram_models.py
