[project]
name = "mcp-marketing-instagram"
version = "0.1.0"
description = "Agent24 Marketing MCP — Instagram (post, reels, stories, caroselli, insights)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "asyncio-throttle>=1.0.0",
    "Pillow>=10.0.0",
    "mcp-common @ git+ssh://git@github.com/Sydus/mcp-common.git@v0.7.1",
]

[project.scripts]
mcp-marketing-instagram = "mcp_instagram.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mcp_instagram", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
